3 Changed flash appearance; template structure cleanup

--- a/templates/Glossary/edit.html.twig
+++ b/templates/Glossary/edit.html.twig
@@ -8,7 +8,8 @@
 
 {{ include('Glossary/form.html.twig', {
     headline: 'Edit your Entry!',
-    button_text: 'Update!'
+    button_text: 'Update!',
+    form: glossary
 }) }}
 
 {% endblock %}
