--- a/templates/Glossary/find_entry.html.twig
+++ b/templates/Glossary/find_entry.html.twig
@@ -6,22 +6,10 @@
 
 {% include('Glossary/navigation.html.twig') %}
 
-<div class="container">
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success" text align="center">
-            {{ message }}
-        </div>
-    {% endfor %}
-
-    <h1>Search for Entry</h1>
-
-    {{ form_start(find_entry) }}
-
-        {{ form_widget(find_entry) }}
-
-        <input type="submit" value="Find entry!" class="btn btn-success">
-
-    {{ form_end(find_entry) }}
-</div>
+{{ include('Glossary/form.html.twig', {
+    headline: 'Search for Entry',
+    button_text: 'Find entry!',
+    form: find_entry
+}) }}
 
 {% endblock %}
