--- a/templates/Glossary/glossary.html.twig
+++ b/templates/Glossary/glossary.html.twig
@@ -8,7 +8,8 @@
 
 {{ include('Glossary/form.html.twig', {
     headline: 'Glossary',
-    button_text: 'Submit!'
+    button_text: 'Submit!',
+    form: glossary
 }) }}
 
 {% endblock %}
