--- a/templates/Glossary/list.html.twig
+++ b/templates/Glossary/list.html.twig
@@ -19,13 +19,13 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Term</th>
-                <th>Description</th>
-                <th>Relevance</th>
-                <th>Created</th>
-                <th>Updated</th>
-                <th>Edit!</th>
-                <th>Delete!</th>
+                <th>{{ 'entry.term'|trans }}</th>
+                <th>{{ 'entry.description'|trans }}</th>
+                <th>{{ 'entry.relevance'|trans }}</th>
+                <th>{{ 'entry.creation.date'|trans }}</th>
+                <th>{{ 'entry.update.date'|trans }}</th>
+                <th>{{ 'entry.edit'|trans }}</th>
+                <th>{{ 'entry.delete'|trans }}</th>
             </tr>
         </thead>
         <tbody>
