--- a/templates/Glossary/edit.html.twig
+++ b/templates/Glossary/edit.html.twig
@@ -7,8 +7,8 @@
 {% include('Glossary/navigation.html.twig') %}
 
 {{ include('Glossary/form.html.twig', {
-    headline: 'Edit your Entry!',
-    button_text: 'Update!',
+    headline: 'edit.entry.headline',
+    button_text: 'edit.entry.button',
     form: glossary
 }) }}
 
