--- a/templates/Glossary/form.html.twig
+++ b/templates/Glossary/form.html.twig
@@ -7,13 +7,13 @@
         {% endfor %}
     {% endfor %}
 
-    <h1>{{ headline }}</h1>
+    <h1>{{ headline|trans }}</h1>
 
     {{ form_start(form) }}
 
     {{ form_widget(form) }}
 
-    <input type="submit" value="{{ button_text }}" class="btn btn-success">
+    <input type="submit" value="{{ button_text|trans }}" class="btn btn-success">
 
     {{ form_end(form) }}
 </div>
