--- a/templates/Glossary/navigation.html.twig
+++ b/templates/Glossary/navigation.html.twig
@@ -1,14 +1,36 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" >Glossary</a>
+    <a class="navbar-brand" >{{ 'nav.headline'|trans }}</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('dashboard') }}">Dashboard</a>
+                <a class="nav-link" href="{{ path('dashboard') }}">{{ 'nav.home'|trans }}</a>
             </li>
-        </ul>
+
+            {% set route = app.request.attributes.get('_route') %}
+            {% set route_params = app.request.attributes.get('_route_params') %}
+            {% set params = route_params|merge(app.request.query.all) %}
+
+
+            {% set availableLocales=available_locales|split('|') %}
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href=""
+                    id="dropdown" data-toggle="dropdown" >{{ 'nav.language'|trans }}</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown">
+                    {% for locale in availableLocales %}
+                    <a class="dropdown-item" href="{{ path('locale_dashboard', { _locale: locale }) }}">
+                       {{ locale|trans }}
+                    </a><br>
+                    {% endfor %}
+                </div>
+            </li>
+       </ul>
     </div>
 </nav>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 
 <br>
 <br>
