5 Added translations for flashmessages

--- a/templates/Glossary/dashboard.html.twig
+++ b/templates/Glossary/dashboard.html.twig
@@ -15,7 +15,8 @@
     <ul class="nav flex-column">
         <li class="nav-item">
             <a href="{{ path('glossary') }}" class="btn btn-outline-secondary">
-            {{ 'dashboard.button.write.entry'|trans }}</a>
+                {{ 'dashboard.button.write.entry'|trans }}
+            </a>
         </li>
 
         <li>
@@ -24,7 +25,8 @@
 
         <li class="nav-item">
             <a href="{{ path('find_entry') }}" class="btn btn-outline-secondary">
-            {{ 'dashboard.button.edit'|trans }}</a>
+                {{ 'dashboard.button.edit'|trans }}
+            </a>
         </li>
 
         <li>
@@ -33,7 +35,8 @@
 
         <li class="nav-item">
             <a href="{{ path('list') }}" class="btn btn-outline-secondary">
-            {{ 'dashboard.button.list'|trans }}</a>
+                {{ 'dashboard.button.list'|trans }}
+            </a>
         </li>
     </ul>
 </div>
