--- a/templates/Glossary/delete_entry.html.twig
+++ b/templates/Glossary/delete_entry.html.twig
@@ -12,10 +12,24 @@
     <p><b>{{ 'delete.entry.demand'|trans }}</b></p>
     <br>
     <p>
-        {{ 'entry.term'|trans }}: {{ glossary.term }}<br>
-        {{ 'entry.description'|trans }}: {{ glossary.description }}
-    </p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>{{ 'entry.term'|trans }}</th>
+                    <th>{{ 'entry.description'|trans }}</th>
 
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{ glossary.term }}</td>
+                    <td>{{ glossary.description }}</td>
+
+                </tr>
+            </tbody>
+        </table>
+    </p>
+    <br>
     {{ form_start(delete_entry) }}
 
     {{ form_widget(delete_entry) }}
