--- a/templates/Glossary/edit.html.twig
+++ b/templates/Glossary/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Editor{% endblock %}
+{% block title %}{{ 'edit.entry.headline'|trans }}{% endblock %}
 
 {% block body %}
 
