--- a/templates/Glossary/form.html.twig
+++ b/templates/Glossary/form.html.twig
@@ -1,7 +1,7 @@
 <div class="container">
     {% for label, messages in app.flashes(['success', 'danger']) %}
         {% for message in messages %}
-            <div class="alert alert-{{ label }}" text align="center">
+            <div class="alert alert-{{ label }}" align="center">
                 {{ message }}
             </div>
         {% endfor %}
