Included CSV and XML Exporter

--- a/templates/Glossary/dashboard.html.twig
+++ b/templates/Glossary/dashboard.html.twig
@@ -38,6 +38,16 @@
                 {{ 'dashboard.button.list'|trans }}
             </a>
         </li>
+
+        <li>
+            <br>
+        </li>
+
+        <li class="nav-item">
+            <a href="{{ path('export') }}" class="btn btn-outline-secondary">
+                {{ 'dashboard.button.export'|trans }}
+            </a>
+        </li>
     </ul>
 </div>
 
